增加了日志审计功能

--- a/aspnet-core/src/YY.Frame.AbpCore.Application/YY.Frame.AbpCore.Application.csproj
+++ b/aspnet-core/src/YY.Frame.AbpCore.Application/YY.Frame.AbpCore.Application.csproj
@@ -11,6 +11,9 @@
     <RootNamespace>YY.Frame.AbpCore</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="EPPlus.Core" Version="1.5.4" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\YY.Frame.AbpCore.Core\YY.Frame.AbpCore.Core.csproj" />
   </ItemGroup>
 </Project>
